[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
bcs = "0.1.6"
bincode = "1.3.3"
borsh = {version = "1.5.5",features = ["derive"]}
prost = {version = "0.13.5",features = ["derive"]}
prost-types = "0.13.5"
protobuf = "3.7.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[build-dependencies]
prost-build = "0.13.5"

