[package]
name = "libp2p"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.0"
async-trait = "0.1.87"
base64 = "0.22.1"
bincode = {version = "1.3"}
futures = "0.3.31"
libp2p = {version = "0.55.0",features = ["request-response","noise","kad", "ping", "tcp", "tokio", "yamux","mdns","floodsub","macros","gossipsub","identify"]}
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"
sled = "0.34.7"
tokio = {version = "1.44.0",features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19",features = ["env-filter"]}
